--- a/src/index.html
+++ b/src/index.html
@@ -8,55 +8,18 @@
   </head>
 
   <body class="ndsn">
-    <ns-panel>
-      <ns-progress
-        steps="4"
-        current="3"
-        info="Payment"
-        next="Account setup"
-      ></ns-progress>
-      <ns-column>
-        <h1 class="enlighten"><b>Payment</b></h1>
-      </ns-column>
-    </ns-panel>
-
     <div x-data="appStore()"
       x-init="price = getPrices(products)">
 
       <ns-panel>
+        <ns-progress steps="4" current="3" info="Payment" next="Account setup"></ns-progress>
 
         <ns-column>
-          <h3 class="h3 enlighten">How would you like to pay?</h3>
-        <ns-column>
-
-        <ns-inputter name="direct-debit" x-model="paymentMethod">
-          <ns-column basketballcourt="" hockeypitch="" footballpitch="2" rugbypitch="2" polofield="2">
-            <ns-selector>
-              <input type="radio" id="dd-monthly" name="question" value="monthly" x-model="paymentMethod">
-              <label for="dd-monthly">Monthly Direct Debit</label>
-              <ns-content slot="description" id="1a">
-                <h3 class="h2 enlighten"><b x-text="price.monthly" id="monthly-price-1"></b> <span>per month</span></h3>
-                <p class="p-normal">That's <b x-text="price.annual" id="annual-price-1"></b> per year</p>
-              </ns-content>
-            </ns-selector>
-
-            <ns-selector>
-              <input type="radio" id="dd-annual" name="question" value="annual" x-model="paymentMethod">
-              <label for="dd-annual">Annual Direct Debit</label>
-              <ns-content slot="description" id="1b">
-                <h3 class="h2 enlighten"><b x-text="price.annual" id="annual-price-2"></b> <span>for 12 months</span></h3>
-                <p class="p-normal">That's <b x-text="price.monthly" id="monthly-price-2"></b> per month</p>
-              </ns-content>
-            </ns-selector>
-          </ns-column>
-        </ns-inputter>
-
-      </ns-panel>
-
-      <ns-panel>
+          <h1 class="enlighten"><b>Payment</b></h1>
+        </ns-column>
 
         <ns-column>
-          <h2 class="h2 enlighten">You're setting up a Direct Debit for <b x-text="price[paymentMethod]" id="total-price"></b> <span x-text="paymentMethod === 'monthly' ? 'per month' : 'per year'"></span> for:</h2>
+          <h3 class="h3 enlighten">You have selected</h3>
         <ns-column>
 
         <ns-column basketballcourt="" hockeypitch="" footballpitch="3" rugbypitch="3" polofield="3">
@@ -75,57 +38,94 @@
         </ns-column>
 
       </ns-panel>
+
+      <ns-panel>
+
+        <ns-column>
+          <h3 class="h2 enlighten">How would you like to pay?</h3>
+        </ns-column>
+
+        <ns-inputter name="direct-debit" x-model="paymentMethod">
+          <ns-column basketballcourt="" hockeypitch="" footballpitch="2" rugbypitch="2" polofield="2">
+            <ns-selector>
+              <input type="radio" id="dd-monthly" name="question" value="monthly" x-model="paymentMethod">
+              <label for="dd-monthly">Monthly Direct Debit</label>
+              <ns-content slot="description" id="1a">
+                <h3 class="h2 enlighten"><b x-text="price.monthly" id="monthly-price-1"></b> <span>per month</span></h3>
+              </ns-content>
+            </ns-selector>
+
+            <ns-selector>
+              <input type="radio" id="dd-annual" name="question" value="annual" x-model="paymentMethod">
+              <label for="dd-annual">Annual Direct Debit</label>
+              <ns-content slot="description" id="1b">
+                <h3 class="h2 enlighten"><b x-text="price.annual" id="annual-price-2"></b> <span>for 12 months</span></h3>
+              </ns-content>
+            </ns-selector>
+          </ns-column>
+        </ns-inputter>
+
+        <ns-standout decoration="green-light">
+          <ns-content>
+            <h2 class="h2 enlighten">You're setting up a Direct Debit for <b x-text="price.monthly" id="monthly-price-2"></b> per month.</h2>
+            <p class="p-large">That's <b x-text="price.annual" id="annual-price-1"></b> per year.</p>
+          </ns-content>
+        </ns-standout>
+
+      </ns-panel>
+
+      <ns-panel>
+
+        <ns-column>
+          <h3 class="h3 enlighten">Your bank details</h3>
+        <ns-column>
+
+        <ns-inputter mask="" separator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="name-of-the-account-holder">
+          <label slot="label" for="text-input">Name of the account holder</label>
+          <input type="text" id="text-input">
+        </ns-inputter>
+
+        <ns-inputter mask="00-00-00" separator="" ignoreseparator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="sort-code">
+          <label slot="label" for="mask-input">Sort code</label>
+          <input type="text" id="mask-input">
+        </ns-inputter>
+
+        <ns-inputter mask="00000000" separator="" ignoreseparator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="bank-or-building-society-account-number">
+          <label slot="label" for="mask-input">Bank or building society account number</label>
+          <input type="text" id="mask-input">
+        </ns-inputter>
+
+      </ns-panel>
+
+      <ns-panel decoration="invert-concave-grey-light">
+        <ns-content>
+          <h3>Important documents</h3>
+          <ul class="download-list">
+            <li>
+              <ns-download href="this-text-gets-ignored.pdf" filesize="123MB" filetype="pdf">Terms and conditions</ns-download>
+            </li>
+            <li>
+              <ns-download href="this-text-gets-ignored.xls" filesize="123MB" filetype="pdf">Direct Debit guarantee</ns-download>
+            </li>
+            <li>
+              <ns-download href="this-text-gets-ignored.txt" filesize="123MB" filetype="pdf">About our insurance products</ns-download>
+            </li>
+          </ul>
+        </ns-content>
+      </ns-panel>
+
+      <ns-panel>
+        <ns-content>
+          <p class="p-small">By clicking the Setup Direct Debit Button, I confirm that I have read all important documents.</p>
+          <ns-cta type="direct" href="!#">Setup Direct Debit</ns-cta>
+          <figure>
+            <img src="https://user-images.githubusercontent.com/34439889/133822183-22c02a41-5ca9-4866-aed8-a39347885155.png" alt="Direct Debit logo" width="194" height="86">
+            <figcaption>British Gas originators identification number: <b>948555</b></figcaption>
+          </figure>
+        </ns-content>
+      </ns-panel>
+
     </div>
-    <ns-panel>
-
-      <ns-column>
-        <h3 class="h3 enlighten">Your bank details</h3>
-      <ns-column>
-
-      <ns-inputter mask="" separator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="name-of-the-account-holder">
-        <label slot="label" for="text-input">Name of the account holder</label>
-        <input type="text" id="text-input">
-      </ns-inputter>
-
-      <ns-inputter mask="00-00-00" separator="" ignoreseparator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="sort-code">
-        <label slot="label" for="mask-input">Sort code</label>
-        <input type="text" id="mask-input">
-      </ns-inputter>
-
-      <ns-inputter mask="00000000" separator="" ignoreseparator="" validation="[&quot;isRequired&quot;]" value="" helper="" name="bank-or-building-society-account-number">
-        <label slot="label" for="mask-input">Bank or building society account number</label>
-        <input type="text" id="mask-input">
-      </ns-inputter>
-
-    </ns-panel>
-
-    <ns-panel>
-      <ns-column>
-
-        <h3 class="h3 enlighten">Important documents</h3>
-        <ul class="download-list">
-          <li>
-          <ns-download href="this-text-gets-ignored.pdf" filesize="123MB" filetype="pdf">Terms and conditions</ns-download>
-          </li>
-          <li>
-          <ns-download href="this-text-gets-ignored.xls" filesize="123MB" filetype="pdf">Direct Debit guarantee</ns-download>
-          </li>
-          <li>
-          <ns-download href="this-text-gets-ignored.txt" filesize="123MB" filetype="pdf">About our insurance products</ns-download>
-          </li>
-        </ul>
-
-        <p class="p-small">By clicking the Setup Direct Debit Button, I confirm that I have read all important documents.</p>
-        <ns-cta type="direct" href="" icon="arrow-right" onclick="action()" loading="false" loadingmessage="Loading..." tabindex="0">Setup Direct Debit</ns-cta>
-
-        <div style="width: 180px; height: 64px;">
-          <ns-image src="https://user-images.githubusercontent.com/34439889/133385388-721326de-61e9-4b51-9846-cacf2283d22c.png
-          " ratio="1x1" alt="Direct Debit logo" backgroundsize="cover"></ns-image>
-        </div>
-        <p class="p-caption">British Gas originators identification number: <b>948555</b></p>
-
-      </ns-column>
-    </ns-panel>
 
     <script src="https://www.britishgas.co.uk/nucleus/nucleus.min.js"></script>
     <script src="main.js"></script>
