--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   </head>
 
   <body class="ndsn">
-    <div x-data="appStore()"
-      x-init="price = getPrices(products)">
+    <div x-data="appStore()">
 
       <ns-panel>
         <ns-progress steps="4" current="3" info="Payment" next="Account setup"></ns-progress>
@@ -26,7 +25,7 @@
           <template x-for="product in products">
             <ns-inputter heading="" x-bind:name="product.id">
               <ns-selector x-bind:decoration="product.decoration" image="" keyline="">
-                <input type="checkbox" x-on:click="toggleSelection(products,product.id,paymentMethod)" x-bind:id="product.id" x-bind:name="product.id" x-bind:value="product.id" x-bind:checked="product.selected">
+                <input type="checkbox" x-on:click="toggleSelection(products,product.id);price=getPrices(products);" x-bind:id="product.id" x-bind:name="product.id" x-bind:value="product.id" x-bind:checked="product.selected">
                 <label x-bind:for="product.id" x-text="product.name"></label>
                 <ns-content slot="description">
                   <h3 class="h4 enlighten"><b x-text="product.displayPrice[paymentMethod]"></b> <span x-text="paymentMethod === 'monthly' ? 'per month' : 'per year'"></span></h3>
@@ -59,17 +58,34 @@
               <input type="radio" id="dd-annual" name="question" value="annual" x-model="paymentMethod">
               <label for="dd-annual">Annual Direct Debit</label>
               <ns-content slot="description" id="1b">
-                <h3 class="h2 enlighten"><b x-text="price.annual" id="annual-price-2"></b> <span>for 12 months</span></h3>
+                <h3 class="h2 enlighten"><b x-text="price.annual" id="annual-price-1"></b> <span>for 12 months</span></h3>
               </ns-content>
             </ns-selector>
           </ns-column>
         </ns-inputter>
 
         <ns-standout decoration="green-light">
-          <ns-content>
-            <h2 class="h2 enlighten">You're setting up a Direct Debit for <b x-text="price.monthly" id="monthly-price-2"></b> per month.</h2>
-            <p class="p-large">That's <b x-text="price.annual" id="annual-price-1"></b> per year.</p>
-          </ns-content>
+          <template x-if="paymentMethod === 'monthly'">
+            <ns-content>
+              <h2 class="h2 enlighten">You're setting up a Direct Debit for
+                <b x-text="price.monthly"></b> per month.
+              </h2>
+              <p class="p-large">That's
+                <b x-text="price.annual"></b> per year.
+              </p>
+            </ns-content>
+          </template>
+
+          <template x-if="paymentMethod === 'annual'">
+            <ns-content>
+              <h2 class="h2 enlighten">You're setting up a Direct Debit for
+                <b x-text="price.annual"></b> <span>per year.</span>
+              </h2>
+              <p class="p-large">That's
+                <b x-text="price.monthly"></b> <span>per month.</span>
+              </p>
+            </ns-content>
+          </template>
         </ns-standout>
 
       </ns-panel>
